--- a/SilkyEngine/SilkyEngine.csproj
+++ b/SilkyEngine/SilkyEngine.csproj
@@ -5,7 +5,8 @@
     <AllowUnsafeBlocks>True</AllowUnsafeBlocks>
   </PropertyGroup>
   <ItemGroup>
-    <PackageReference Include="Silk.NET" Version="1.1.1"/>
-    <PackageReference Include="SixLabors.ImageSharp" Version="1.0.0-beta0007"/>
+    <PackageReference Include="MathNet.Numerics" Version="4.9.1" />
+    <PackageReference Include="Silk.NET" Version="1.1.1" />
+    <PackageReference Include="SixLabors.ImageSharp" Version="1.0.0-beta0007" />
   </ItemGroup>
 </Project>
